# TrainForge

./: .dockerignore  .editorconfig  .env.docker.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README_EN.md  SECURITY.md  THIRD_PARTY_LICENSES.md  compose.gpu.yaml  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
configs/: system.docker.yaml  system.example.yaml
configs/tasks/: signal-light-detect.yaml  signal-light-segment.yaml
docker/: api-entrypoint.sh  api.Dockerfile  api.gpu.Dockerfile  deploy.sh  nginx.conf  update-from-package.sh  web.Dockerfile
docs/: architecture.md  current-status.md  technical-research.md  ui-guide.md  workflow-tutorial.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.test.ts  api.ts  appShellLayout.test.ts  main.tsx  navigation.test.ts  navigation.test.tsx  navigation.tsx  navigationGuard.test.ts  navigationGuard.ts  navigationHistory.test.ts  navigationHistory.ts  react19Compatibility.test.ts  requestId.test.ts  requestId.ts  styles.css  uploadPolicy.test.ts  uploadPolicy.ts
requirements/: data.txt
scripts/: package-deploy.ps1  setup-data-environment.ps1  start-ui.ps1  sync-cloud-data.ps1
tests/: conftest.py
tests/e2e/: test_phase1_detection.py  test_phase1_segmentation.py  workflow_support.py
tests/integration/: test_annotation_import.py  test_annotation_sam_api.py  test_api_dashboard.py  test_append_videos_to_batch.py  test_cloud_file_upload_api.py  test_dataset_reconciliation_api.py  test_dvc_release.py  test_frame_extraction.py  (+9 more)
(+290 files in other folders)
