[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-model-factory"
version = "0.1.1"
description = "Versioned YOLO dataset preparation and model artifact pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "typer==0.16.0",
  "pydantic==2.11.7",
  "SQLAlchemy==2.0.41",
  "alembic==1.16.4",
  "PyYAML==6.0.2",
  "opencv-python==4.11.0.86",
  "ImageHash==4.3.2",
  "Pillow==11.3.0",
  "datumaro==1.12.0",
  "dvc==3.67.1",
    "fastapi==0.116.1",
    "python-multipart>=0.0.20,<1",
  "uvicorn[standard]==0.35.0",
  "ultralytics==8.4.95",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "httpx==0.28.1",
]

[project.scripts]
yolo-factory = "yolo_factory.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["yolo_factory"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
